<resources>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="title_activity_web_viiew">School expenses</string>

    <string name="facebook">facebook</string>
    <string name="youtube">youtube</string>
    <string name="snapchat">snapchat</string>
    <string name="call">Call</string>
    <string name="help">Help</string>
    <string name="bottomsheet">BottomSheet Sample</string>

    <string name="app_name">Anwar Alfihaa</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ghyaab">ghyaab</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Press Your Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below :</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="item_1">Sports</string>
    <string name="item_2">Cultural</string>
    <string name="item_3">Entertainment</string>
    <string name="item_4">social</string>
    <string name="student_name">Student Name </string>
    <string name="tirm">stage</string>
    <string name="cclass">Class</string>
    <string name="gheyab_data">Date absence</string>
    <string name="Farida">Farida Hussein</string>
    <string name="elmada">Subject</string>
    <string name="month">Month</string>
    <string name="up_degree">state </string>
    <string name="down_degree">Down Degree</string>
    <string name="time">Time</string>
    <string name="late">late fees</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="amount">All Amount</string>
    <string name="residual">Residual</string>
    <string name="paid">Paid</string>
    <string name="activity_ghyaab">Absence students</string>
    <string name="activity_rsoom">School expenses</string>
    <string name="activity_anshta">Student Activities</string>
    <string name="activity_works">Homeworks</string>
    <string name="gdwal">table class</string>
    <string name="sharf">Honorary board</string>
    <string name="mustwa">students level</string>
    <string name="news">School News</string>
    <string name="out">Log Out</string>
    <string name="Thursday">Thursday</string>
    <string name="Dowen_degree">Dowen Degree</string>
    <string name="num1">2000</string>
    <string name="num2">1000</string>
    <string name="tirm2">tirm2</string>
    <string name="tirm1">tirm1</string>
    <string name="internet">looding ..</string>
    <string name="app_intro_skip">Skip</string>

    <string name="home1">"The interface of the program to enter for each student is a single school fees and absence and the schedule of separation and a map to access the school "</string>
    <string name="intro1">"First interface "</string>

    <string name="home2">"School fees are shown to the parent only from the first and second tram fees and the participation in the bus "</string>
    <string name="intro2">School expenses</string>

    <string name="home3">"The interface of the program to enter for each student concerns one of the school fees and the absence of the separation table and map to access the school "</string>

    <string name="home4">"The weekly schedule for each student can be enlarged to show more "</string>
    <string name="intro4">"Daily school schedule "</string>

    <string name="home5">"The level of the student for each item details in the month of the student's examination and the student's degree "</string>
    <string name="intro5">"Student's level "</string>
    <string name="intro3">arrive at school</string>
    <string name="no_internet">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="bus">Subscribe Bus</string>
    <string name="allamunt">All Amount</string>
    <string name="buss">Amount Bus</string>
    <string name="rsomtirm1">Amount Tirm1</string>
    <string name="rsomtirm2">Amount Tirm2</string>
    <string name="activity_payschool">Arrive</string>
    <string name="last">last</string>
    <string name="date">date</string>
    <string name="Visitor">Visitor</string>
    <string name="total">Total</string>
    <string name="rsoom">payset</string>
    <string name="about">design </string>

</resources>



