<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/back"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/list_row_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        android:background="@color/back">

        <LinearLayout
            android:background="#E0F2F1"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView

                android:id="@+id/imgnews"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/notify" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titnews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/paid"
                    android:textColor="#009688"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:layout_margin="4dp"

                    android:layout_width="2dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="-6dp"
                    android:background="#009688" />

                <TextView
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/num1"
                    android:textColor="#5fbeb5"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/residual"
                    android:textColor="#009688"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:layout_margin="4dp"

                    android:layout_width="2dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="-6dp"
                    android:background="#009688" />

                <TextView
                    android:id="@+id/left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/num2"
                    android:textColor="#5fbeb5"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#86827e"
                    android:textSize="15dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_margin="4dp"

                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:text=":"
                    android:textSize="15dp"
                    android:textColor="#86827e"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="25/5/1999"
                    android:textColor="#b1aca7"
                    android:textSize="15dp"
                    android:textStyle="italic" />


            </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_marginTop="-6dp"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#e1e1e1"/>

</LinearLayout>