<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#1ac798" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6f4f0"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view4"

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/activity_rsoom"
                android:textColor="#2f9f81"
                android:textSize="25dp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/i"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_margin="5dp"
                android:src="@drawable/change" />

        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#1ac798" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#1ac798" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="2000"
                    android:textColor="#13af86"
                    android:textSize="20dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#bde6db"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="@string/allamunt"
                    android:textColor="#04664c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#1ac798" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/t2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="2000"
                    android:textColor="#13af86"
                    android:textSize="20dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#bde6db"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="@string/buss"
                    android:textColor="#04664c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="#1ac798" />


















        </LinearLayout>

    </LinearLayout>

