<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="15dip"
                android:text="2000"
                android:textColor="#13af86"
                android:textSize="18dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/namffe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="#bde6db"
                android:gravity="center"
                android:padding="15dip"
                android:text="اسم الطالب  "
                android:textColor="#04664c"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e6f4f0"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewup"

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                android:textColor="#2f9f81"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageViewup"
                android:layout_width="50dp"

                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/total" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#1ac798" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="20dip"
                android:text="2000"
                android:textColor="#13af86"
                android:textSize="25dp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#bde6db"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/amount"
                android:textColor="#04664c"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#1ac798" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tpaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="20dip"
                android:text="2000"
                android:textColor="#13af86"
                android:textSize="25dp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#bde6db"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/paid"
                android:textColor="#04664c"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>